--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,10 +41,11 @@ form button[type="submit"]:hover {
     border: 1px solid #eee;
     padding: 15px;
     margin-bottom: 15px;
-    border-radius: 5px;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     gap: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .psychologist-card img {
@@ -74,6 +75,7 @@ form button[type="submit"]:hover {
     max-width: 200px;
     height: auto;
     margin-bottom: 10px;
+    border-radius: 50%;
 }
 
 .psychologist-profile-page p {
